export interface Device {
  blink(): string;
}
