@startuml

skinparam class {
  backgroundColor lightgoldenrodyellow
  arrowColor darkgoldenrod
  borderColor darkgoldenrod
}

class EmbeddedControl <XOR> {
  # device: Device
  constructor(device: Device)
  + turnVolumeUp(): string
}

class RemoteControl <XOR> {
  + addChannelToFavorites(): string
}

interface Device {
  blink(): string
}

class FlatScreen <PRE> {
  + blink(): string
}

class Decoder <PRE> {
  + blink(): string
}

EmbeddedControl <|-- RemoteControl

Device <-o EmbeddedControl

Device <|.. FlatScreen
Device <|.. Decoder

@enduml
